--- a/Editeur/Editeur.vbproj
+++ b/Editeur/Editeur.vbproj
@@ -102,6 +102,12 @@
     <Compile Include="Database\GameItem.vb" />
     <Compile Include="Database\GameNPC.vb" />
     <Compile Include="Database\GameSpell.vb" />
+    <Compile Include="frmConfigNPC.Designer.vb">
+      <DependentUpon>frmConfigNPC.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmConfigNPC.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Maps\Attribute.vb" />
     <Compile Include="frmDataEditor.Designer.vb">
       <DependentUpon>frmDataEditor.vb</DependentUpon>
@@ -163,6 +169,9 @@
     <Compile Include="GamePlayer.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmConfigNPC.resx">
+      <DependentUpon>frmConfigNPC.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmDataEditor.resx">
       <DependentUpon>frmDataEditor.vb</DependentUpon>
     </EmbeddedResource>
