--- a/Editeur/Editeur.vbproj
+++ b/Editeur/Editeur.vbproj
@@ -150,7 +150,7 @@
     <Compile Include="Database\GameItem.vb" />
     <Compile Include="Database\GameNPC.vb" />
     <Compile Include="Database\GameSpell.vb" />
-    <Compile Include="Database\MapNPC.vb" />
+    <Compile Include="Maps\MapNPC.vb" />
     <Compile Include="frmConfigNPC.Designer.vb">
       <DependentUpon>frmConfigNPC.vb</DependentUpon>
     </Compile>
