Génération du sprite de test
* Inclusion de la texture du personnage de test au projet

--- a/Editeur/Editeur.vbproj
+++ b/Editeur/Editeur.vbproj
@@ -306,6 +306,11 @@
   <ItemGroup>
     <None Include="Resources\Arrow up.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\Sprite.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
