--- a/Client/Client.vbproj
+++ b/Client/Client.vbproj
@@ -53,6 +53,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="tguinet">
+      <HintPath>..\tguinet.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
