--- a/Client/Client.vbproj
+++ b/Client/Client.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A6B79737-D412-4052-AB03-2609B233F51E}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <StartupObject>Client.Module1</StartupObject>
+    <StartupObject>Client.Main</StartupObject>
     <RootNamespace>Client</RootNamespace>
     <AssemblyName>Client</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -69,7 +69,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Module1.vb" />
+    <Compile Include="Main.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
