Polymorphisme et optimisations mineures
Utilisation du polymorphisme (héritage : GameCharacter<-GamePlayer,
MapNPC, GameClass, GameNPC)
Enumération des directions pour une meilleur comprehension en
GameManager
[...]

--- a/Editeur/Editeur.vbproj
+++ b/Editeur/Editeur.vbproj
@@ -156,6 +156,8 @@
     <Compile Include="Database\GameItem.vb" />
     <Compile Include="Database\GameNPC.vb" />
     <Compile Include="Database\GameSpell.vb" />
+    <Compile Include="GameCharacter.vb" />
+    <Compile Include="GameDirection.vb" />
     <Compile Include="Maps\MapNPC.vb" />
     <Compile Include="frmConfigNPC.Designer.vb">
       <DependentUpon>frmConfigNPC.vb</DependentUpon>
