--- a/Client/Client.vbproj
+++ b/Client/Client.vbproj
@@ -83,7 +83,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes Entity\Attribute.vb" />
-    <Compile Include="Classes Entity\Drawable.vb" />
     <Compile Include="Classes Entity\GameArmor.vb" />
     <Compile Include="Classes Entity\GameCharacter.vb" />
     <Compile Include="Classes Entity\GameEntity.vb" />
@@ -125,6 +124,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
