--- a/Client/Client.vbproj
+++ b/Client/Client.vbproj
@@ -49,6 +49,9 @@
   <PropertyGroup>
     <ApplicationIcon>FC.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="sfmlnet-audio-2">
       <HintPath>..\packages\SFML.Net.2.1.5\lib\sfmlnet-audio-2.dll</HintPath>
@@ -94,6 +97,7 @@
     <Compile Include="Classes Entity\GamePlayer.vb" />
     <Compile Include="Classes Entity\GamePet.vb" />
     <Compile Include="Classes Entity\GameRelativeMap.vb" />
+    <Compile Include="Classes Entity\GameStates.vb" />
     <Compile Include="Classes Entity\GameVector.vb" />
     <Compile Include="Classes Entity\GameWeapon.vb" />
     <Compile Include="Classes Entity\Layer.vb" />
@@ -125,6 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="My Project\app.manifest" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
