--- a/Serveur/Serveur.vbproj
+++ b/Serveur/Serveur.vbproj
@@ -97,6 +97,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Network\GameClient.vb" />
+    <Compile Include="Network\GameServer.vb" />
+    <Compile Include="Network\ModClientPackets.vb" />
+    <Compile Include="Network\ModPacketsActions.vb" />
+    <Compile Include="Network\ModServerPackets.vb" />
+    <Compile Include="Network\NetworkBuffer.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
