Intégration des cartes de jeu dans le client
(!) Il est nécessaire de mettre à jour la class GameMap dans le projet
Editeur afin d'éviter l'erreur critique au lancement du client

--- a/Client/Client.vbproj
+++ b/Client/Client.vbproj
@@ -119,6 +119,7 @@
     <Compile Include="Designer\Designers\ServerConnecterDesigner.vb" />
     <Compile Include="Designer\Designers\CharacterSelectionDesigner.vb" />
     <Compile Include="Designer\Designers\GameDesigner.vb" />
+    <Compile Include="GameEntities\Utilities\GameTileset.vb" />
     <Compile Include="Main.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
