--- a/Editeur/Editeur.vbproj
+++ b/Editeur/Editeur.vbproj
@@ -158,6 +158,7 @@
     <Compile Include="Database\GameSpell.vb" />
     <Compile Include="GameCharacter.vb" />
     <Compile Include="GameDirection.vb" />
+    <Compile Include="Maps\GameTileset.vb" />
     <Compile Include="Maps\MapNPC.vb" />
     <Compile Include="frmConfigNPC.Designer.vb">
       <DependentUpon>frmConfigNPC.vb</DependentUpon>
@@ -165,7 +166,7 @@
     <Compile Include="frmConfigNPC.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Maps\Attribute.vb" />
+    <Compile Include="Maps\GameAttribute.vb" />
     <Compile Include="frmDataEditor.Designer.vb">
       <DependentUpon>frmDataEditor.vb</DependentUpon>
     </Compile>
