--- a/Client/Client.vbproj
+++ b/Client/Client.vbproj
@@ -94,7 +94,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configs.vb" />
+    <Compile Include="Batch.vb" />
+    <Compile Include="ContentHandler\ContentContext.vb" />
+    <Compile Include="ContentHandler\ContentManager.vb" />
     <Compile Include="GameEntities\Objects\GameActionCase.vb" />
     <Compile Include="GameEntities\Utilities\GameMapDeserializationBinder.vb" />
     <Compile Include="GameEntities\Utilities\GameVelocity.vb" />
