Création du NavigatorHelper
Le NavigatorHelper permet de changer de designer (etat de jeu)
facilement et rapidement

--- a/Client/Client.vbproj
+++ b/Client/Client.vbproj
@@ -97,33 +97,34 @@
     <Compile Include="Batch.vb" />
     <Compile Include="ContentHandler\ContentContext.vb" />
     <Compile Include="ContentHandler\ContentManager.vb" />
-    <Compile Include="GameEntities\Objects\GameActionCase.vb" />
+    <Compile Include="GameEntities\Components\GameActionCase.vb" />
     <Compile Include="GameEntities\Utilities\GameMapDeserializationBinder.vb" />
     <Compile Include="GameEntities\Utilities\GameVelocity.vb" />
-    <Compile Include="GameEntities\Utilities\GameTimer.vb" />
-    <Compile Include="GameEntities\Utilities\GameAttribute.vb" />
-    <Compile Include="GameEntities\Objects\GameArmor.vb" />
-    <Compile Include="GameEntities\Objects\GameCharacter.vb" />
-    <Compile Include="GameEntities\Utilities\GameDirection.vb" />
-    <Compile Include="GameEntities\Objects\GameEntity.vb" />
-    <Compile Include="GameEntities\Objects\GameEnvironment.vb" />
-    <Compile Include="GameEntities\Objects\GameMap.vb" />
-    <Compile Include="GameEntities\Objects\GameItem.vb" />
-    <Compile Include="GameEntities\Objects\GameObject.vb" />
-    <Compile Include="GameEntities\Objects\GameNPC.vb" />
-    <Compile Include="GameEntities\Objects\GamePlayer.vb" />
-    <Compile Include="GameEntities\Objects\GamePet.vb" />
+    <Compile Include="GameEntities\Components\GameTimer.vb" />
+    <Compile Include="GameEntities\Components\GameAttribute.vb" />
+    <Compile Include="GameEntities\Components\GameArmor.vb" />
+    <Compile Include="GameEntities\Components\GameCharacter.vb" />
+    <Compile Include="GameEntities\Components\GameDirection.vb" />
+    <Compile Include="GameEntities\Components\GameEntity.vb" />
+    <Compile Include="GameEntities\Components\GameEnvironment.vb" />
+    <Compile Include="GameEntities\Components\GameMap.vb" />
+    <Compile Include="GameEntities\Components\GameItem.vb" />
+    <Compile Include="GameEntities\Components\GameObject.vb" />
+    <Compile Include="GameEntities\Components\GameNPC.vb" />
+    <Compile Include="GameEntities\Components\GamePlayer.vb" />
+    <Compile Include="GameEntities\Components\GamePet.vb" />
     <Compile Include="GameEntities\Utilities\GameRelativeMap.vb" />
-    <Compile Include="GameEntities\Utilities\GameStates.vb" />
-    <Compile Include="GameEntities\Objects\GameWeapon.vb" />
+    <Compile Include="Designer\Utilities\GameStates.vb" />
+    <Compile Include="GameEntities\Components\GameWeapon.vb" />
     <Compile Include="GameEntities\Interfaces\IUpdatable.vb" />
-    <Compile Include="GameEntities\Objects\Layer.vb" />
+    <Compile Include="GameEntities\Components\Layer.vb" />
     <Compile Include="Designer\Designers\AccountConnecterDesigner.vb" />
     <Compile Include="Designer\Interfaces\Designer.vb" />
     <Compile Include="Designer\Designers\ServerConnecterDesigner.vb" />
     <Compile Include="Designer\Designers\CharacterSelectionDesigner.vb" />
-    <Compile Include="Designer\Designers\GameDesigner.vb" />
-    <Compile Include="GameEntities\Utilities\GameTileset.vb" />
+    <Compile Include="Designer\Designers\GamePlayDesigner.vb" />
+    <Compile Include="GameEntities\Components\GameTileset.vb" />
+    <Compile Include="Designer\Utilities\NavigatorHelper.vb" />
     <Compile Include="Main.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
