--- a/Client/Client.vbproj
+++ b/Client/Client.vbproj
@@ -100,7 +100,8 @@
     <Compile Include="ContentHandler\ContentType.vb" />
     <Compile Include="ContentHandler\GameResources.vb" />
     <Compile Include="Designer\Utilities\GuiExtension.vb" />
-    <Compile Include="GameEntities\Components\GameActionCase.vb" />
+    <Compile Include="Designer\Utilities\Vector2.vb" />
+    <Compile Include="GameEntities\Components\GUIActionCase.vb" />
     <Compile Include="GameEntities\Utilities\GameMapDeserializationBinder.vb" />
     <Compile Include="GameEntities\Utilities\GameVelocity.vb" />
     <Compile Include="GameEntities\Components\GameTimer.vb" />
@@ -120,7 +121,7 @@
     <Compile Include="Designer\Utilities\GameStates.vb" />
     <Compile Include="GameEntities\Components\GameWeapon.vb" />
     <Compile Include="GameEntities\Interfaces\IUpdatable.vb" />
-    <Compile Include="GameEntities\Components\Layer.vb" />
+    <Compile Include="GameEntities\Components\MapLayer.vb" />
     <Compile Include="Designer\Designers\AccountConnecterDesigner.vb" />
     <Compile Include="Designer\Interfaces\Designer.vb" />
     <Compile Include="Designer\Designers\ServerConnecterDesigner.vb" />
