--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,19 @@
 *.sln.docstates
 
 # Build results
-[Bb]in/
+[Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
+[Rr]eleases/
 x64/
+x86/
 build/
 bld/
+[Bb]in/
 [Oo]bj/
+
+# Visual Studio 2015 cache/options directory
+.vs/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
