Mise en place SFML .Net 2.2 et Modification TGUI .Net (compatibilité 2.2)
Mise à jour de la version de la librairie SFML et modifications pour la
compatibilité.
Mise à jour de TGUI .Net et recompilation.

--- a/Client/Client.vbproj
+++ b/Client/Client.vbproj
@@ -84,8 +84,9 @@
     <Reference Include="Tao.OpenGl.ExtensionLoader">
       <HintPath>.\Tao.OpenGl.ExtensionLoader.dll</HintPath>
     </Reference>
-    <Reference Include="tguinet">
-      <HintPath>.\tguinet.dll</HintPath>
+    <Reference Include="tguinet, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\tguinet.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
