--- a/Client/Client.vbproj
+++ b/Client/Client.vbproj
@@ -87,7 +87,7 @@
     </Reference>
     <Reference Include="tguinet, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\tguinet.dll</HintPath>
+      <HintPath>.\tguinet.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
